fix links and images alignment

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -36,6 +36,10 @@ body {
   
 }
 
+.img-fluid {
+  max-width: 100%;
+}
+
 .img-responsive {
 
   .sm-img {
