--- a/scss/components/molecules/card/_card-primary.scss
+++ b/scss/components/molecules/card/_card-primary.scss
@@ -3,7 +3,7 @@
 
   .header {
 
-    width: 100%;
+    max-width: 100%;
   }
 
   .body {
